GNOME Bugzilla – Bug 614554
[afc] Fix mount name for jailbroken filesystem access
Last modified: 2011-04-08 11:45:00 UTC
Make the display name of the mount a bit nicer for jailbroken access.
Created attachment 157674 [details] [review] [afc] Fix mount name for jailbroken filesystem access
Looks fine to me, much better than "Service %d on Apple Mobile Device" which is rather hard to understand for average user joe. Judging from git master though, this is pretty much fixed.
Created attachment 184279 [details] [review] [afc] Fix mount name for jailbroken filesystem access (vs. git master) Just an adoption to current git master changing the translation string.
Note that those changes are mostly useless, as in 99.9% of cases, the actual device name will be used in the volume name.