afc: Use a better display name for jailbroken device access

https://bugzilla.gnome.org/show_bug.cgi?id=614554